--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en" class="no-js"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en" class="no-js"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en" class="no-js"> <!--<![endif]-->
-	
+
 <head>
 	<meta charset="utf-8">
 	<title>bhuber | Portfolio</title>
@@ -277,6 +277,28 @@
 								<a href="assets/img/portfolio/IMG_0473.jpg" class="media-popup" title="Duke">
 									<div class="work-item-info">
 										<h3>Duke</h3>
+										<i class="fa fa-search-plus"></i>
+									</div>
+								</a>
+							</div>
+						</li>
+						<li class="work-item renovation">
+							<img src="assets/img/portfolio/IMG_0939.jpg" alt="Backyard Waterfall">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/IMG_0939.jpg" class="media-popup" title="Backyard Waterfall">
+									<div class="work-item-info">
+										<h3>Backyard Waterfall</h3>
+										<i class="fa fa-search-plus"></i>
+									</div>
+								</a>
+							</div>
+						</li>
+						<li class="work-item renovation">
+							<img src="assets/img/portfolio/IMG_20140413_151214.jpg" alt="Kitchen Overhaul">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/IMG_20140413_151214.jpg" class="media-popup" title="Kitchen Overhaul">
+									<div class="work-item-info">
+										<h3>My sister's new kitchen</h3>
 										<i class="fa fa-search-plus"></i>
 									</div>
 								</a>
