add GG to Portfolio

--- a/index.html
+++ b/index.html
@@ -304,6 +304,17 @@
 								</a>
 							</div>
 						</li>
+						<li class="work-item photography">
+							<img src="assets/img/portfolio/IMG_2475.jpg" alt="Golden Gate">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/IMG_2475.jpg" class="media-popup" title="Golden Gate">
+									<div class="work-item-info">
+										<h3>Golden Gate</h3>
+										<i class="fa fa-search-plus"></i>
+									</div>
+								</a>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
