--- a/index.html
+++ b/index.html
@@ -315,6 +315,17 @@
 								</a>
 							</div>
 						</li>
+						<li class="work-item photography">
+							<img src="assets/img/portfolio/5748521785_8103e46a6a_o.jpg" alt="Butterfyly">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/5748521785_8103e46a6a_o.jpg" class="media-popup" title="Butterfyly">
+									<div class="work-item-info">
+										<h3>Butterfyly</h3>
+										<i class="fa fa-search-plus"></i>
+									</div>
+								</a>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
