--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 					<hr />
 				</div>
 				<div class="section-content">
-					<p>Stuff about me.</p>
+					<p>Brnad new site, stay tuned for more content!</p>
 
-					<p>More Stuff about me.</p>
+					<!-- <p>More Stuff about me.</p> -->
 				</div>
 			</div>
 		</div>
@@ -321,6 +321,17 @@
 								<a href="assets/img/portfolio/5748521785_8103e46a6a_o.jpg" class="media-popup" title="Butterfyly">
 									<div class="work-item-info">
 										<h3>Butterfyly</h3>
+										<i class="fa fa-search-plus"></i>
+									</div>
+								</a>
+							</div>
+						</li>
+						<li class="work-item photography">
+							<img src="assets/img/portfolio/IMG_1607.jpg" alt="Jeep Ad?">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/IMG_1607.jpg" class="media-popup" title="Jeep Ad?">
+									<div class="work-item-info">
+										<h3>Jeep Ad?</h3>
 										<i class="fa fa-search-plus"></i>
 									</div>
 								</a>
