--- a/index.html
+++ b/index.html
@@ -337,6 +337,18 @@
 								</a>
 							</div>
 						</li>
+						<li class="work-item web-work">
+							<img src="assets/img/portfolio/app_explostion.png" alt="App Explosion">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/app_explostion.png" class="media-popup" title="App Explosion">
+									<div class="work-item-info">
+										<h3>App Explosion</h3>
+										<p>Various sample apps using Angular.</p>
+										<i class="fa fa-search-plus"></i>
+									</div>
+								</a>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
