--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 							<div class="image-overlay">
 								<a href="assets/img/portfolio/app_explostion.png" class="media-popup" title="App Explosion">
 									<div class="work-item-info">
-										<h3>App Explosion</h3>
+										<h3>Where is this</h3>
 										<p>Various sample apps using Angular.</p>
 										<i class="fa fa-search-plus"></i>
 									</div>
