testing link in alt attr

--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
 							</div>
 						</li>
 						<li class="work-item web-work">
-							<img src="assets/img/portfolio/app_explostion.png" alt="App Explosion">
+							<img src="assets/img/portfolio/app_explostion.png" alt="https://app-explosion.firebaseapp.com">
 							<div class="image-overlay">
 								<a href="assets/img/portfolio/app_explostion.png" class="media-popup" title="App Explosion">
 									<div class="work-item-info">
-										<h3>Where is this</h3>
+										<h3>App Explosion</h3>
 										<p>Various sample apps using Angular.</p>
 										<i class="fa fa-search-plus"></i>
 									</div>
