--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					<li><a href="#" data-filter=".web-work">WEB</a></li>
 					<li><a href="#" data-filter=".photography">PHOTOGRAPHY</a></li>
 					<li><a href="#" data-filter=".renovation">RENOVATION</a></li>
-					<li><a href="#" data-filter=".video">VIDEO</a></li>
+					<li><a href="#" data-filter=".video">VIDEOS</a></li>
 				</ul>
 
 				<div class="work-item-wrapper">
@@ -345,6 +345,9 @@
 										<h3>App Explosion</h3>
 										<p>Various sample apps using Angular.</p>
 										<i class="fa fa-search-plus"></i>
+									</div>
+									<div class="work-item-info">
+										<a href="https://app-explosion.firebaseapp.com">App Explosion</a>
 									</div>
 								</a>
 							</div>
