added Live Sit links

--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
 										<p>Motivate kids to earn their screen time.</p>
 										<i class="fa fa-search-plus"></i>
 									</div>
+									<div class="work-item-info">
+										<a href="https://git-up.herokuapp.com/">Live Site</a>
+									</div>
 								</a>
 							</div>
 						</li>
@@ -256,6 +259,9 @@
 										<h3>eFIll</h3>
 										<p>Pure JavaScript & jQuery Front End project.</p>
 										<i class="fa fa-play-circle"></i>
+									</div>
+									<div class="work-item-info">
+										<a href="http://huber007.dyndns.org:8090/eFill/dist/">Live Site</a>
 									</div>
 								</a>
 							</div>
@@ -347,7 +353,7 @@
 										<i class="fa fa-search-plus"></i>
 									</div>
 									<div class="work-item-info">
-										<a href="https://app-explosion.firebaseapp.com">App Explosion</a>
+										<a href="https://app-explosion.firebaseapp.com">Live Site</a>
 									</div>
 								</a>
 							</div>
