--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 		<div id="twitter-stream" class="section twitter-stream">
 			<div class="container">
 				<div class="twitter-icon">
-					<i class="fa fa-heart-o"></i>
+					<i class="fa fa-twitter"></i>
 				</div>
 				<div id="tweet"></div>
 			</div>
