disable form submit

--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
 										<label class="sr-only" for="message">Message:</label>
 										<textarea id="message" name="message" class="form-control" placeholder="Message*" required></textarea>
 									</div>
-									<button type="submit" class="btn btn-primary btn-lg" id="submit-button">
-										<i class="fa loading-icon"></i> <span>Send Message</span>
+									<button disabled type="submit" class="btn btn-primary btn-lg" id="submit-button">
+										<i class="fa loading-icon"></i> <span>Coming Soon</span>
 									</button>
 									<input type="hidden" name="msg-submitted" id="msg-submitted" value="true">
 								</form>
