--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<title>bhuber | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description" content="Parallax HTML One-Page Template for Agency and Personal">
+	<meta name="description" content="A little about Brian Huber, his work, and interests">
 	<meta name="author" content="The Develovers">
 
 	<!-- Styles -->
