--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<hr />
 				</div>
 				<div class="section-content">
-					<p>Brnad new site, stay tuned for more content!</p>
+					<p>Brand new site, stay tuned for more content!</p>
 
 					<!-- <p>More Stuff about me.</p> -->
 				</div>
