--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 						<span class="skill-name">Javascript</span>
 					</div>
 					<div class="col-md-3 text-center">
-						<div id="chart4" class="chart" data-percent="65"><span class="percent">65%</span></div>
-						<span class="skill-name">Ruby</span>
+						<div id="chart4" class="chart" data-percent="90"><span class="percent">65%</span></div>
+						<span class="skill-name">HTML5/CSS3</span>
 					</div>
 				</div>
 			</div>
