--- a/index.html
+++ b/index.html
@@ -162,61 +162,6 @@
 		</div>
 		<!-- END SKILLS CHART -->
 
-		<!-- SERVICES -->
-		<!-- <div id="services" class="section darker services" >
-			<div class="container">
-				<div class="section-heading">
-					<h2>SERVICES</h2>
-					<p>We strive to give the best service to our clients</p>
-					<hr />
-				</div>
-				<div class="section-content">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-checkmark2 service-icon"></span>
-								<div class="service-text">
-									<h3>Elegant Design</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-pen service-icon"></span>
-								<div class="service-text">
-									<h3>Carefully Handcrafted</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-lab service-icon"></span>
-								<div class="service-text">
-									<h3>Design Formula</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="service-item">
-								<span class="icon-phone service-icon"></span>
-								<div class="service-text">
-									<h3>Responsive</h3>
-									<p>Quickly actualize proactive niches rather than user friendly catalysts for change.</p>
-									<a href="#" class="read-more"><span>Read more ...</span> <i class="i fa fa-arrow-circle-right"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
-		<!-- END SERVICES -->
 
 		<!-- WORKS -->
 		<div id="works" class="section works">
@@ -247,6 +192,21 @@
 									</div>
 									<div class="work-item-info">
 										<a href="https://git-up.herokuapp.com/">Live Site</a>
+									</div>
+								</a>
+							</div>
+						</li>
+						<li class="work-item web-work">
+							<img src="assets/img/portfolio/small/fly_buy.png" alt="Fly-Buy">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/fly_buy.png" class="media-popup" title="Fly-Buy">
+									<div class="work-item-info">
+										<h3>Fly-Buy</h3>
+										<p>Did you pay more than the person next to you?</p>
+										<i class="fa fa-search-plus"></i>
+									</div>
+									<div class="work-item-info">
+										<a href="https://fly-buy.cfapps.io">Live Site</a>
 									</div>
 								</a>
 							</div>
