--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 										<i class="fa fa-search-plus"></i>
 									</div>
 									<div class="work-item-info">
-										<a href="https://git-up.herokuapp.com/">Live Site</a>
+										<a href="https://git-up.herokuapp.com/"><h3>Live Site</h3></a>
 									</div>
 								</a>
 							</div>
