add fly-buy video

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
 								</a>
 							</div>
 						</li>
-						<li class="work-item web-work">
-							<img src="assets/img/portfolio/fly_buy.png" alt="Fly-Buy">
+						<li class="work-item web-work video">
+							<a href="https://www.youtube.com/watch?v=CrNDiSWgRWo" class="mfp-iframe media-popup" title="Video Title"><img src="assets/img/portfolio/fly_buy.png" alt="Fly-Buy"> <i class="fa fa-play-circle hidden-lg"></i></a>
 							<div class="image-overlay">
-								<a href="assets/img/portfolio/fly_buy.png" class="media-popup" title="Fly-Buy">
+								<a href="https://www.youtube.com/watch?v=CrNDiSWgRWo" class="mfp-iframe media-popup" title="Fly-Buy">
 									<div class="work-item-info">
 										<h3>Fly-Buy</h3>
 										<p>Did you pay more than the person next to you?</p>
