updated bio, added BARKnB project

--- a/index.html
+++ b/index.html
@@ -111,13 +111,11 @@
 			<div class="container">
 				<div class="section-heading">
 					<h2>ABOUT ME</h2>
-					<p>A great beginning to know me</p>
 					<hr />
 				</div>
 				<div class="section-content">
-					<p>Brand new site, stay tuned for more content!</p>
-
-					<!-- <p>More Stuff about me.</p> -->
+					<p>Brian Huber is  an up and coming software development professional who has worked in the technology sector for a number of years, in the Denver and Silicon Valley markets. Currently he has just completed the Galvanize Full Stack program and is preparing to focus his career specifically on web application development. As a long time tech-head, he has worked with various dimensions of technology since his early days and still maintains a Linux home server as well as a vast IoT setup. Brian’s hobbies include photography, snowboarding, triathlons, home remodeling, and discovering the latest technology gadgets.</p>
+					<p>Brian has a BS in Business from Colorado State University with concentrations in Finance and International Business.</p>
 				</div>
 			</div>
 		</div>
@@ -151,7 +149,7 @@
 					</div>
 					<div class="col-md-3 text-center">
 						<div id="chart1" class="chart" data-percent="92"><span class="percent">92%</span></div>
-						<span class="skill-name">Javascript</span>
+						<span class="skill-name">Javascript/NodeJS</span>
 					</div>
 					<div class="col-md-3 text-center">
 						<div id="chart4" class="chart" data-percent="85"><span class="percent">85%</span></div>
@@ -181,6 +179,21 @@
 
 				<div class="work-item-wrapper">
 					<ul class="work-item-list list-col-4">
+						<li class="work-item web-work">
+							<img src="assets/img/portfolio/barknb_club.jpg" alt="BARKnB">
+							<div class="image-overlay">
+								<a href="assets/img/portfolio/barknb_club.jpg" class="media-popup" title="BARKnB">
+									<div class="work-item-info">
+										<h3>BARKnB</h3>
+										<p>A community to bring dog owners and dog lovers together.</p>
+										<i class="fa fa-search-plus"></i>
+									</div>
+									<div class="work-item-info">
+										<a href="http://barknb.club">Live Site</a>
+									</div>
+								</a>
+							</div>
+						</li>
 						<li class="work-item web-work">
 							<img src="assets/img/portfolio/small/gitUp.png" alt="gitUp">
 							<div class="image-overlay">
@@ -260,7 +273,7 @@
 							</div>
 						</li>
 						<li class="work-item renovation">
-							<img src="assets/img/portfolio/small/kitchen_small.jpg" alt="Kitchen Overhaul">
+							<img src="assets/img/portfolio/IMG_20140413_151214.jpg" alt="Kitchen Overhaul">
 							<div class="image-overlay">
 								<a href="assets/img/portfolio/IMG_20140413_151214.jpg" class="media-popup" title="Kitchen Overhaul">
 									<div class="work-item-info">
