--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 										<i class="fa fa-search-plus"></i>
 									</div>
 									<div class="work-item-info">
-										<a href="http://barknb.club">Live Site</a>
+										<a target="_blank" href="http://barknb.club">Live Site</a>
 									</div>
 								</a>
 							</div>
@@ -204,7 +204,7 @@
 										<i class="fa fa-search-plus"></i>
 									</div>
 									<div class="work-item-info">
-										<a href="https://git-up.herokuapp.com/">Live Site</a>
+										<a target="_blank" href="https://git-up.herokuapp.com/">Live Site</a>
 									</div>
 								</a>
 							</div>
@@ -219,7 +219,7 @@
 										<i class="fa fa-search-plus"></i>
 									</div>
 									<div class="work-item-info">
-										<a href="https://fly-buy.cfapps.io">Live Site</a>
+										<a target="_blank" href="https://fly-buy.cfapps.io">Live Site</a>
 									</div>
 								</a>
 							</div>
@@ -245,7 +245,7 @@
 										<i class="fa fa-play-circle"></i>
 									</div>
 									<div class="work-item-info">
-										<a href="http://huber007.dyndns.org:8090/eFill/dist/">Live Site</a>
+										<a target="_blank" href="http://huber007.dyndns.org:8090/eFill/dist/">Live Site</a>
 									</div>
 								</a>
 							</div>
@@ -326,7 +326,7 @@
 										<i class="fa fa-search-plus"></i>
 									</div>
 									<div class="work-item-info">
-										<a href="https://app-explosion.firebaseapp.com">Live Site</a>
+										<a target="_blank" href="https://app-explosion.firebaseapp.com">Live Site</a>
 									</div>
 								</a>
 							</div>
@@ -346,61 +346,24 @@
 			</div>
 			<div class="section-content">
 				<div class="container">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="contact-info">
-								<ul class="list-unstyled">
-									<li>
-										<i class="fa fa-map-marker pull-left"></i>
-										<h3>Locations</h3>
-										<p>Mountain View, CA<br />Centennial, CO</p>
-									</li>
-									<li>
-										<i class="fa fa-user pull-left"></i>
-										<h3>Phone</h3>
-										<p>(303) 506-6581</p>
-									</li>
-									<li>
-										<i class="fa fa-envelope pull-left"></i>
-										<h3>Email</h3>
-										<p><a href="mailto:bhuber@alumni.colostate.edu">bhuber@alumni.colostate.edu</a></p>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-8">
-							<div class="contact-form">
-								<div class="alert"></div>
-								<form id="contact-form" method="post" role="form" novalidate>
-									<div class="row">
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="sr-only" for="name">Name:</label>
-												<input type="text" id="name" class="form-control" name="name" placeholder="Name*" required>
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="sr-only" for="email">Email:</label>
-												<input type="email" id="email" class="form-control" name="email" placeholder="Email*" required>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="sr-only" for="subject">Subject:</label>
-										<input type="text" id="subject" class="form-control" name="subject" placeholder="Subject">
-									</div>
-									<div class="form-group">
-										<label class="sr-only" for="message">Message:</label>
-										<textarea id="message" name="message" class="form-control" placeholder="Message*" required></textarea>
-									</div>
-									<button disabled type="submit" class="btn btn-primary btn-lg" id="submit-button">
-										<i class="fa loading-icon"></i> <span>Coming Soon</span>
-									</button>
-									<input type="hidden" name="msg-submitted" id="msg-submitted" value="true">
-								</form>
-							</div>
-						</div>
+					<div class="contact-info">
+						<ul class="list-unstyled list-flex-row">
+							<li>
+								<i class="fa fa-map-marker pull-left"></i>
+								<h3>Locations</h3>
+								<p>San Francisco, CA<br />Denver, CO</p>
+							</li>
+							<li>
+								<i class="fa fa-user pull-left"></i>
+								<h3>Phone</h3>
+								<p>(303) 506-6581</p>
+							</li>
+							<li>
+								<i class="fa fa-envelope pull-left"></i>
+								<h3>Email</h3>
+								<p><a href="mailto:bhuber@alumni.colostate.edu">bhuber@alumni.colostate.edu</a></p>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
