--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3 text-center">
+						<div id="chart1" class="chart" data-percent="92"><span class="percent">92%</span></div>
+						<span class="skill-name">Javascript/NodeJS</span>
+					</div>
+					<div class="col-md-3 text-center">
 						<div id="chart3" class="chart" data-percent="75"><span class="percent">75%</span></div>
 						<span class="skill-name">Photography</span>
 					</div>
 					<div class="col-md-3 text-center">
 						<div id="chart2" class="chart" data-percent="80"><span class="percent">80%</span></div>
 						<span class="skill-name">Linux</span>
-					</div>
-					<div class="col-md-3 text-center">
-						<div id="chart1" class="chart" data-percent="92"><span class="percent">92%</span></div>
-						<span class="skill-name">Javascript/NodeJS</span>
 					</div>
 					<div class="col-md-3 text-center">
 						<div id="chart4" class="chart" data-percent="85"><span class="percent">85%</span></div>
@@ -200,8 +200,8 @@
 							<img src="assets/img/portfolio/small/gitUp.png" alt="gitUp">
 							<div class="image-overlay">
 								<a href="assets/img/portfolio/gitUp.png" class="" title="gitUp"
-								data-highlight-1=""
-								data-highlight-2="">
+								data-highlight-1="assets/img/portfolio/gitUp.png"
+								data-highlight-2="assets/img/portfolio/gitup_highlight_1.png">
 									<div class="work-item-info">
 										<h3>gitUp</h3>
 										<p>Motivate kids to earn their screen time.</p>
@@ -299,11 +299,11 @@
 							</div>
 						</li>
 						<li class="work-item photography">
-							<img src="assets/img/portfolio/small/5748521785_8103e46a6a_o.jpg" alt="Butterfyly">
+							<img src="assets/img/portfolio/small/5748521785_8103e46a6a_o.jpg" alt="Butterfly">
 							<div class="image-overlay">
-								<a href="assets/img/portfolio/5748521785_8103e46a6a_o.jpg" class="media-popup mfp-image" title="Butterfyly">
+								<a href="assets/img/portfolio/5748521785_8103e46a6a_o.jpg" class="media-popup mfp-image" title="Butterfly">
 									<div class="work-item-info">
-										<h3>Butterfyly</h3>
+										<h3>Butterfly</h3>
 										<i class="fa fa-search-plus"></i>
 									</div>
 								</a>
