--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
 	<script src="assets/js/jquery-2.1.0.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/plugins/scrollto/jquery.scrollTo-1.4.3.1-min.js"></script>
-	<script src="assets/js/plugins/scrollto/jquery.localscroll-1.2.7-min.js"></script>
+	<!-- <script src="assets/js/plugins/scrollto/jquery.localscroll-1.2.7-min.js"></script> -->
 	<script src="assets/js/plugins/easing/jquery.easing.min.js"></script>
 	<script src="assets/js/plugins/parallax/jquery.parallax-1.1.3.js"></script>
-	<script src="assets/js/plugins/twitter/twitter-fetcher.js"></script>
+	<!-- <script src="assets/js/plugins/twitter/twitter-fetcher.js"></script> -->
 	<script src="assets/js/plugins/jpreloader/jpreloader.min.js"></script>
 	<script src="assets/js/plugins/isotope/imagesloaded.pkgd.js"></script>
 	<script src="assets/js/plugins/isotope/isotope.pkgd.min.js"></script>
@@ -422,7 +422,7 @@
 	<script src="assets/js/plugins/waypoints/waypoints.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.colorbox/1.6.4/jquery.colorbox.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.js"></script>
-	<script src="assets/js/templates/dev_item.hbs"></script>
+	<script src="assets/js/templates/dev_item.hbs" type="text/x-handlebars-template"></script>
 	<script src="assets/js/loop.js"></script>
 
 </body>
